...
                                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Mx-cv-b3e" userLabel="InputBaseView">
                                        <rect key="frame" x="1" y="1" width="278" height="224"/>
                                        <subviews>
                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" text="平仮名に変換する文章" translatesAutoresizingMaskIntoConstraints="NO" id="hRL-Lp-irq">
                                                <rect key="frame" x="0.0" y="37" width="278" height="187"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <accessibility key="accessibilityConfiguration" identifier="入力エリア"/>
                                                <viewLayoutGuide key="safeArea" id="q51-tQ-Rz8"/>
                                                <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="17"/>
                                                <textInputTraits key="textInputTraits"/>
                                                <connections>
                                                    <outlet property="delegate" destination="BYZ-38-t0r" id="dMh-lJ-PAP"/>
                                                </connections>
...
                                <rect key="frame" x="20" y="262" width="190" height="44"/>
                                <color key="backgroundColor" red="0.90528362989425659" green="0.54643326997756958" blue="0.26805785298347473" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="85a-6T-1SH"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="17"/>
                                <state key="normal" title="ひらがなにする">
                                    <color key="titleColor" red="0.98975080251693726" green="0.93000084161758423" blue="0.88356029987335205" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="8"/>
                                    </userDefinedRuntimeAttribute>
...
                                    <action selector="convert:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Dqn-8F-8cR"/>
                                </connections>
                            </button>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="ここに ひらがなが でてくるよ" translatesAutoresizingMaskIntoConstraints="NO" id="oJ7-iI-fgy">
                                <rect key="frame" x="20" y="322" width="280" height="170"/>
                                <color key="backgroundColor" red="0.98975080250000003" green="0.93000084159999996" blue="0.88356029989999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="結果表示エリア"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
                            </textView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Mx-t8-6mg">
                                <rect key="frame" x="20" y="508" width="280" height="44"/>
...
